--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template - 1</title>
-    <!-- master css file -->
-    <link rel="stylesheet" href="css/leon.css">
     <!-- render all elements normally -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome library -->
     <link rel="stylesheet" href="css/all.min.css">
+    <!-- master css file -->
+    <link rel="stylesheet" href="css/leon.css">
     <!-- Font link -->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -192,11 +192,11 @@
     <!-- Start of Contact -->
     <div class="contact" id="contact">
         <div class="container">
-            <div class="special-head">contact</div>
+            <h2 class="special-head">contact</h2>
             <p>We are born to create</p>
-            <div class="contact-text">
-                <p>Feel free to drop us a line at:</p>
-                <p>leonagency@gmail.com</p>
+            <div class="info">
+                <p class="label">Feel free to drop us a line at:</p>
+                <a href="mailto:leonagency@gmail.com?subject=Contact" class="link">leonagency@gmail.com</a>
                 <div class="social">
                     Find us on social networks
                     <i class="fa-brands fa-linkedin"></i>
